"added new page""

--- a/src/main/resources/templates/auth/forgot_password.html
+++ b/src/main/resources/templates/auth/forgot_password.html
@@ -20,7 +20,7 @@
 
 
 <section class="section section--login" id="forgot">
-    <div class="section_header_login">
+    <div class="login_header">
         <h2 class="section_title_login">Forgot Password</h2>
     </div>
 
