--- a/src/main/resources/templates/auth/registration.html
+++ b/src/main/resources/templates/auth/registration.html
@@ -25,7 +25,7 @@
 </div>
 
 <section class="section section--login">
-    <div class="section_header_login">
+    <div class="login_header">
         <h2 class="section_title_login">Registration</h2>
         <h3 class="section_suptitle_login">Enter your info</h3>
     </div>
