--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,9 +34,9 @@
                 </a>
                 <nav class="nav">
                     <a class="nav_link" th:href="@{/}">Home</a>
-                    <a class="nav_link" th:href="@{/products}">Catalog</a>
+                    <a class="nav_link" th:href="@{/#catalog}">Catalog</a>
                     <a class="nav_link" th:href="@{/user/cart}">Cart</a>
-                    <a class="nav_link" th:href="@{/contact}">Contact</a>
+                    <a class="nav_link" th:href="@{/#contact}">Contact</a>
                     <a class="nav_link" th:href="@{/user/profile}">Profile</a>
                 </nav>
             </div>
