--- a/src/main/resources/templates/user/change_password.html
+++ b/src/main/resources/templates/user/change_password.html
@@ -20,7 +20,7 @@
 
 
 <section class="section section--login" id="change">
-    <div class="section_header_login">
+    <div class="login_header">
         <h2 class="section_title_login">Change Password</h2>
         <h3 class="section_suptitle_login">Enter new password</h3>
     </div>
