--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -78,7 +78,7 @@ hr {
 .intro_inner{
     width: 100%;
     max-width: 880px;
-    margin: 0 auto;
+    margin: 150px auto 0;
 
     text-align: center;
 }
@@ -91,8 +91,6 @@ hr {
     letter-spacing: .2em;
 }
 .intro-suptitle {
-    /*margin-bottom: 20px;*/
-
     font-size: 54px;
     color: #fff;
 }
@@ -151,28 +149,6 @@ hr {
 .header:hover {
     background-color: rgb(166, 97, 215, 0.4);
 }
-/*.header_scroll_down {*/
-/*    color: #fff;*/
-/*    display: block;*/
-/*    position: absolute;*/
-/*    !*color: inherit;*!*/
-/*    text-decoration: none;*/
-/*    text-align: center;*/
-/*    font-size: 2rem;*/
-/*    bottom: 65px;*/
-/*    left: 50%;*/
-/*    margin-left: -25px;*/
-/*    width: 50px;*/
-/*    height: 50px;*/
-/*    line-height: 54px;*/
-/*    border-radius: 50%;*/
-/*    border: 1px solid;*/
-/*    opacity: .6;*/
-/*    transition: opacity .5s*/
-/*}*/
-/*.pe-7s-angle-down:before {*/
-/*    content: "\e688"*/
-/*}*/
 
 
 
@@ -196,9 +172,6 @@ hr {
     text-decoration: none;
 
     transition: color .2s linear;
-}
-.nav_link--other {
-    color: #0c0c0c;
 }
 .nav_link:after {
     content: "";
@@ -226,15 +199,47 @@ hr {
 .nav_link.active {
     color: #a661d7;
 }
-/*.pe-7s-angle-down:before {*/
-/*    content: "\e688"*/
-/*}*/
-/*.header .nav_logo .nav_logo-onscroll {*/
-/*    display: none*/
-/*}*/
-/*.header.nk-navbar-white-text-on-top .nav_logo .nav_logo-onscroll {*/
-/*    display: block*/
-/*}*/
+/* Navigation for other */
+.nav_link_other {
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 500;
+
+    display: inline-block;
+    vertical-align: top;
+    padding: 10px;
+    position: relative;
+
+    color: #0c0c0c;
+    text-decoration: none;
+
+    transition: color .2s linear;
+}
+.nav_link_other:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+
+    background-color: #fff;
+    opacity: 0;
+
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+
+    transition: opacity .2s linear;
+}
+.nav_link_other:hover {
+    color: #fff;
+}
+.nav_link_other:hover:after,
+.nav_link_other.active:after{
+    opacity: 1;
+}
+.nav_link.active {
+    color: #fff;
+}
 
 
 
@@ -279,15 +284,6 @@ hr {
 .pas_link.active {
     color: #a661d7;
 }
-/*.pe-7s-angle-down:before {*/
-/*    content: "\e688"*/
-/*}*/
-/*.header .nav_logo .nav_logo-onscroll {*/
-/*    display: none*/
-/*}*/
-/*.header.nk-navbar-white-text-on-top .nav_logo .nav_logo-onscroll {*/
-/*    display: block*/
-/*}*/
 .pas_logo {
     align-items: center;
 }
@@ -330,7 +326,53 @@ hr {
     background-color: rgba(166, 97, 215, 0.59);
     color: #000;
 }
+.btn_scroll {
+    margin-top: 100px;
+    width: 50px;
+    height: 50px;
+    line-height: 54px;
 
+    border-radius: 50%;
+    border: 2px solid;
+    background: none;
+
+    font-size: 24px;
+    color: #fff;
+
+    transition: color .2s linear;
+}
+.btn_scroll:hover {
+    color: #a661d7;
+}
+
+
+
+
+/*.btn_scroll {*/
+/*    display: block;*/
+/*    position: absolute;*/
+
+/*    bottom: 65px;*/
+/*    left: 50%;*/
+/*    margin-left: -25px;*/
+/*    width: 50px;*/
+/*    height: 50px;*/
+/*    line-height: 54px;*/
+
+/*    border-radius: 50%;*/
+/*    border: 1px solid;*/
+/*    opacity: .8;*/
+
+/*    font-size: 2rem;*/
+/*    color: #000;*/
+/*    text-align: center;*/
+/*    text-decoration: none;*/
+
+/*    transition: opacity .5s*/
+/*}*/
+/*.btn_scroll:before {*/
+/*    content: "\2193";*/
+/*}*/
 
 
 
@@ -391,55 +433,50 @@ hr {
 .catalog{
     margin-top: 40px;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 .catalog_item{
-    width: 400px;
-    position: relative;
-
-    background-color: rgba(166, 97, 215, 0.21)
+    padding: 20px 180px;
 }
-.catalog_item:hover .catalog_img {
-    transform: translate3d(-10px, -10px, 0);
-}
-
-.catalog_item:hover .catalog_img img {
-    opacity: .5;
-}
-
-.catalog_item:hover .catalog_text {
-    opacity: 1;
-}
-
 .catalog_img {
-    /*background: linear-gradient(to bottom, #000, #333);*/
-    background: linear-gradient(to bottom, rgba(51, 39, 87, 0.75), rgba(110, 68, 183, 0.25));
+    position: relative;
 
     transition: transform .2s linear;
 }
-
+.catalog_img:hover {
+    transform: translate3d(-10px, -10px, 0);
+}
 .catalog_img img {
+    width: 100px;
+    height: 100px;
     display: block;
-    transition: opacity .1s linear;
+    transition: opacity .2s linear;
 }
 .catalog_text {
     width: 100%;
+    padding-bottom: 50px;
 
-    font-size: 72px;
+    font-size: 24px;
     color: #333;
-    /*font-family: 'Work Sans', sans-serif;*/
-    /*text-transform: uppercase;*/
-    font-weight: 200;
+    font-family: 'Work Sans', sans-serif;
+    text-transform: uppercase;
+    font-weight: 300;
     text-align: center;
-    opacity: 0;
 
     position: absolute;
-    top: 50%;
+    top: 150%;
+    right: 0;
     left: 0;
-    z-index: 2;
+    /*z-index: 1;*/
     transform: translate3d(0, -50%, 0);
 
+
     transition: opacity .2s linear;
+}
+.catalog_item:hover .catalog_text {
+    color: #a661d7;
 }
 
 
@@ -606,11 +643,14 @@ hr {
     font-weight: 300;
     color: #333;
     padding-top: 20px;
+    padding-bottom: 30px;
     text-transform: uppercase;
 }
 .prod_category {
     font-size: 24px;
     margin: 10px 0;
+
+    border-bottom: 3px solid #a661d7;
 }
 .prod_category a {
     color: #0c0c0c;
@@ -619,18 +659,22 @@ hr {
 
     transition: linear .2s;
 }
+.prod_category img{
+    width: 20px;
+    height: 20px;
+}
 .prod_category a:hover {
     color: #a661d7;
     text-shadow: 0 3px 8px rgba(0,0,0,0.2);
 }
 .prod_list {
-    margin: 0 100px;
+    margin: 40px 100px;
     text-align: center;
 }
 .prod_list_one {
     display: inline-block;
     margin: 20px;
-    padding-top: 50px;
+    padding-bottom: 30px;
 
     font-family: 'Work Sans', sans-serif;
     font-size: 24px;
