--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
 <!--                    <img th:src="@{/images/logo-light.svg}" alt="" width="170">-->
                 </a>
                 <nav class="nav">
-                    <a class="nav_link" th:href="@{/}">Home</a>
+                    <a class="nav_link" th:href="@{/#intro}">Home</a>
                     <a class="nav_link" th:href="@{/#catalog}">Catalog</a>
                     <a class="nav_link" th:href="@{/user/cart}">Cart</a>
                     <a class="nav_link" th:href="@{/#contact}">Contact</a>
@@ -50,18 +50,13 @@
                 <h2 class="intro_title">New Best Store Ever</h2>
                 <h1 class="intro-suptitle">We are about to change the way </h1>
                 <h1 class="intro-suptitle intro-suptitle--dop">you shopping</h1>
+                <button class=" btn_scroll" id="scroll">&darr;</button>
             </div>
-
-            <div>
-                <a class="header_scroll_down" href="#header_scroll_down">
-                    <span class="pe-7s-angle-down"></span>
-                </a>
-            </div>
-            <div id="header_scroll_down"></div>
-
         </div>
     </div>
 </section>
+
+
 
 
 <!--Catalog-->
@@ -75,17 +70,39 @@
         <div class="catalog">
             <div class="catalog_item">
                 <div class="catalog_img">
-                    <img th:src="@{/images/catalog-1.png}" alt="">
+                    <img th:src="@{/images/electronic.png}" alt="">
+                    <txt class="catalog_text">Electronic</txt>
                 </div>
-                <a th:href="@{/products}"><div class="catalog_text">Products</div></a>
+
+<!--                <a th:href="@{/products}"><div class="catalog_text">Electronics</div></a>-->
             </div>
 
             <div class="catalog_item">
                 <div class="catalog_img">
-                    <img th:src="@{/images/catalog-2.png}" alt="">
+                    <img th:src="@{/images/food.png}" alt="">
+                    <txt class="catalog_text">Food</txt>
                 </div>
-                <div class="catalog_text">Sales</div>
+                <!--                <div class="catalog_text">Food</div>-->
             </div>
+        </div>
+
+        <div class="catalog">
+            <div class="catalog_item">
+                <div class="catalog_img">
+                    <img style="opacity: .6" th:src="@{/images/shoes.png}" alt="">
+                    <txt class="catalog_text">Shoes</txt>
+                </div>
+<!--                <a th:href="@{/products}"><div class="catalog_text">Shoes</div></a>-->
+            </div>
+
+            <div class="catalog_item">
+                <div class="catalog_img">
+                    <img th:src="@{/images/clothes.png}" alt="">
+                    <txt class="catalog_text">Clothes</txt>
+                </div>
+                <!--                <a th:href="@{/products}"><div class="catalog_text">Clothes</div></a>-->
+            </div>
+
         </div>
     </div>
 </section>
