--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -22,15 +22,15 @@
         <div class="container">
             <div class="header_inner" style="height: 67px">
                 <a th:href="@{/}" class="header_logo" style="height: 67px">
-                    <img th:src="@{/images/logo-light.png}" alt="" width="170">
+                    <img th:src="@{/images/logo.png}" alt="" width="170">
 <!--                    <img th:src="@{/images/logo-light.svg}" alt="" width="170">-->
                 </a>
                 <nav class="nav">
-                    <a class="nav_link nav_link--other" th:href="@{/}">Home</a>
-                    <a class="nav_link nav_link--other" th:href="@{/products}">Catalog</a>
-                    <a class="nav_link nav_link--other" th:href="@{/user/cart}">Cart</a>
-                    <a class="nav_link nav_link--other" th:href="@{/#contact}">Contact</a>
-                    <a class="nav_link nav_link--other" th:href="@{/user/profile}">Profile</a>
+                    <a class="nav_link_other" th:href="@{/}">Home</a>
+                    <a class="nav_link_other" th:href="@{/products}">Catalog</a>
+                    <a class="nav_link_other" th:href="@{/user/cart}">Cart</a>
+                    <a class="nav_link_other" th:href="@{/#contact}">Contact</a>
+                    <a class="nav_link_other" th:href="@{/user/profile}">Profile</a>
                 </nav>
             </div>
         </div>
