--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,28 @@
+:root {
+    --bg-color: #ffffff;
+    --text-color: #000000;
+}
+
+.dark-theme {
+    --bg-color: #202020;
+    --text-color: #ffffff;
+}
+
+
+body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+.dark-theme body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+
+
+
+
 html {
     scroll-behavior: smooth;
 }
@@ -158,6 +183,8 @@ hr {
 .nav {
     font-size: 14px;
     text-transform: uppercase;
+
+    white-space: nowrap;
 }
 .nav_link {
     font-family: 'Work Sans', sans-serif;
@@ -262,18 +289,6 @@ hr {
     transition: color .2s linear;
     font-size: 14px;
 }
-/*.pas_link:after {*/
-/*    content: "";*/
-/*    display: block;*/
-/*    position: center;*/
-/*    width: 100%;*/
-/*    height: 2.5px;*/
-/*    background-color: #a661d7;*/
-/*    opacity: 0;*/
-/*    top: 100%;*/
-/*    z-index: 1;*/
-/*    transition: opacity .2s linear;*/
-/*}*/
 .pas_link:hover {
     color: #a661d7;
 }
@@ -344,35 +359,51 @@ hr {
 .btn_scroll:hover {
     color: #a661d7;
 }
+.btn_theme {
+    display: inline-block;
 
+    margin-top: 10px;
+    margin-left: 20px;
 
+    font-size: 14px;
+    font-weight: 200;
+    text-transform: uppercase;
+    text-decoration: none;
 
+    transition: background .2s linear, color .2s linear;
+}
+.btn_first {
+    margin-left: 20px;
 
-/*.btn_scroll {*/
-/*    display: block;*/
-/*    position: absolute;*/
+    font-size: 14px;
+    font-weight: 200;
+    text-transform: uppercase;
+    text-decoration: none;
 
-/*    bottom: 65px;*/
-/*    left: 50%;*/
-/*    margin-left: -25px;*/
-/*    width: 50px;*/
-/*    height: 50px;*/
-/*    line-height: 54px;*/
+    transition: .2s linear;
 
-/*    border-radius: 50%;*/
-/*    border: 1px solid;*/
-/*    opacity: .8;*/
+    position: absolute;
+    z-index: 1;
+}
+.btn_second {
+    margin-left: 20px;
 
-/*    font-size: 2rem;*/
-/*    color: #000;*/
-/*    text-align: center;*/
-/*    text-decoration: none;*/
+    font-size: 14px;
+    font-weight: 200;
+    text-transform: uppercase;
+    text-decoration: none;
 
-/*    transition: opacity .5s*/
-/*}*/
-/*.btn_scroll:before {*/
-/*    content: "\2193";*/
-/*}*/
+    transition: .2s linear;
+
+    z-index: 2;
+    opacity: 0;
+}
+.btn_theme:hover .btn_first {
+    opacity: 0;
+}
+.btn_theme:hover .btn_second {
+    opacity: 1;
+}
 
 
 
