--- a/src/main/resources/templates/products/products.html
+++ b/src/main/resources/templates/products/products.html
@@ -34,18 +34,26 @@
 
 
 <section class="section" id="products" >
-    <header class="header header--other" id="header">
+    <header class="header" id="header">
         <div class="container">
             <div class="header_inner" style="height: 67px">
                 <a th:href="@{/}" class="header_logo" style="height: 67px">
-                    <img th:src="@{/images/logo.png}" alt="" width="170">
+                    <img th:src="@{/images/logo-light.png}" alt="" width="170">
                 </a>
                 <nav class="nav">
-                    <a class="nav_link_other" th:href="@{/}">Home</a>
-                    <a class="nav_link_other" th:href="@{/products}">Catalog</a>
-                    <a class="nav_link_other" th:href="@{/user/cart}">Cart</a>
-                    <a class="nav_link_other" th:href="@{/#contact}">Contact</a>
-                    <a class="nav_link_other" th:href="@{/user/profile}">Profile</a>
+                    <a class="nav_link" th:href="@{/#intro}">Home</a>
+                    <a class="nav_link" th:href="@{/#catalog}">Catalog</a>
+                    <a class="nav_link" th:href="@{/user/cart}">Cart</a>
+                    <a class="nav_link" th:href="@{/#contact}">Contact</a>
+                    <a class="nav_link" th:href="@{/user/profile}">Profile</a>
+                    <div class="btn_theme">
+                        <img class="btn_first" onclick="setTheme('light')" th:src="@{/images/sun_light.png}" alt="" width="20">
+                        <img class="btn_second" onclick="setTheme('light')" th:src="@{/images/sun.png}" alt="" width="20">
+                    </div>
+                    <div class="btn_theme">
+                        <img class="btn_first" onclick="setTheme('dark')" th:src="@{/images/moon_light.png}" alt="" width="20">
+                        <img class="btn_second" onclick="setTheme('dark')" th:src="@{/images/moon.png}" alt="" width="20">
+                    </div>
                 </nav>
             </div>
         </div>
@@ -97,15 +105,13 @@
 
 
 
-<!--    <form th:action="@{/}">-->
-<!--        <button class="profile_button" type="submit">Back</button>-->
-<!--    </form>-->
-
 
 
 </section>
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/js/app.js"></script>
 
 
 
