--- a/src/main/resources/templates/products/product.html
+++ b/src/main/resources/templates/products/product.html
@@ -2,36 +2,123 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>BOZON</title>
-    <style>
-        p {
-            color: black;
-            font-family: "GTEestiPro",arial,sans-serif;
-        }
-    </style>
-    <link th:href="@{../css/profile_button.css}" rel="stylesheet" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Bozon | Online-store</title>
+    <link rel="icon" type="image/png" th:href="@{../images/icon.png}">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" th:href="@{../css/style.css}">
+    <!--  Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Work+Sans:wght@300;500;700&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-<h1><b><p th:text="${product.getName()}"></p></b></h1>
-<h2><p th:text="${product.getCategory()}"></p></h2>
-<p th:text="${product.getDescription()}"></p>
-<div th:if="${not flag}">
-    <form th:action="@{/login}">
-        <button class="profile_button" type="submit" name="product">Add to cart</button>
-    </form>
-</div>
 
-<div th:if="${flag}">
-    <form th:if="${cart == null}" th:action="@{/products/{id}/add_to_cart (id=${product.getId()})}" th:object="${product}" th:method="patch">
-        <button class="profile_button" type="submit" name="product">Add to cart</button>
-    </form>
-    <form th:if="${not (cart == null)}" th:action="@{/user/cart}">
-        <button class="profile_button" type="submit" name="product">Go to cart</button>
-    </form>
-</div>
-<br>
-<form th:action="@{/products}">
-    <button class="profile_button" type="submit" name="product">Back</button>
-</form>
+
+<section class="section" id="product" >
+    <header class="header" id="header">
+        <div class="container">
+            <div class="header_inner" style="height: 67px">
+                <a th:href="@{/}" class="header_logo" style="height: 67px">
+                    <img th:src="@{/images/logo-light.png}" alt="" width="170">
+                </a>
+                <nav class="nav">
+                    <a class="nav_link" th:href="@{/#intro}">Home</a>
+                    <a class="nav_link" th:href="@{/products}">Catalog</a>
+                    <a class="nav_link" th:href="@{/user/cart}">Cart</a>
+                    <a class="nav_link" th:href="@{/#contact}">Contact</a>
+                    <a class="nav_link" th:href="@{/user/profile}">Profile</a>
+                    <div class="btn_theme">
+                        <img class="btn_first" onclick="setTheme('light')" th:src="@{/images/sun_light.png}" alt="" width="20">
+                        <img class="btn_second" onclick="setTheme('light')" th:src="@{/images/sun.png}" alt="" width="20">
+                    </div>
+                    <div class="btn_theme">
+                        <img class="btn_first" onclick="setTheme('dark')" th:src="@{/images/moon_light.png}" alt="" width="20">
+                        <img class="btn_second" onclick="setTheme('dark')" th:src="@{/images/moon.png}" alt="" width="20">
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+
+    <div class="product_page">
+        <h2 class="product_title" th:text="${product.getName()}"></h2>
+        <h3 class="product_suptitle" th:text="${product.getCategory()}"></h3>
+
+
+        <div class="product_info">
+            <img class="product_img" th:src="@{/images/iphone.png}" alt="" width="300">
+            <div class="product_txt">
+                <txtt>Smartphone Apple iPhone 11 128 GB black</txtt>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="product_page">
+        <div class="product_info">
+            <div class="product_txt">
+                <p th:text="${product.getDescription()}" style="font-size: 24px"></p>
+                <txt>
+                    Nothing extra. Only the most. The dual camera system will not leave any of your
+                    friends behind the scenes. The fastest iPhone processor with more memory and
+                    more storage space. The highest video quality on iPhone means that your story will
+                    become even brighter and more detailed.
+                </txt>
+            </div>
+
+            <div class="product_block" th:if="${not flag}">
+                <form th:action="@{/login}">
+                    <button class="btn" type="submit" name="product">Add to cart</button>
+                </form>
+            </div>
+
+            <div class="product_block" th:if="${flag}">
+                <form th:if="${cart == null}" th:action="@{/products/{id}/add_to_cart (id=${product.getId()})}" th:object="${product}" th:method="patch">
+                    <button class="btn" type="submit" name="product">Add to cart</button>
+                </form>
+                <form th:if="${not (cart == null)}" th:action="@{/user/cart}">
+                    <button class="btn" type="submit" name="product">Go to cart</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
+</section>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/js/app.js"></script>
+
+
+
+
+
+<!--<h1><b><p th:text="${product.getName()}"></p></b></h1>-->
+<!--<h2><p th:text="${product.getCategory()}"></p></h2>-->
+<!--<p th:text="${product.getDescription()}"></p>-->
+<!--<div th:if="${not flag}">-->
+<!--    <form th:action="@{/login}">-->
+<!--        <button class="profile_button" type="submit" name="product">Add to cart</button>-->
+<!--    </form>-->
+<!--</div>-->
+
+
+
+<!--<form th:action="@{/products}">-->
+<!--    <button class="profile_button" type="submit" name="product">Back</button>-->
+<!--</form>-->
+
+
+
+
+
+
 </body>
 </html>
