--- a/src/main/resources/templates/products/products.html
+++ b/src/main/resources/templates/products/products.html
@@ -4,19 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Catalog</title>
+    <title>Bozon | Online-store</title>
     <link rel="icon" type="image/png" th:href="@{../images/icon.png}">
-
-<!--    <style>-->
-<!--        a {-->
-<!--            color: black;-->
-<!--            font-family: "GTEestiPro",arial,sans-serif;-->
-<!--            text-decoration: none;-->
-<!--        }-->
-<!--        a:hover {-->
-<!--            color: #685bff;-->
-<!--        }-->
-<!--    </style>-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -42,7 +31,7 @@
                 </a>
                 <nav class="nav">
                     <a class="nav_link" th:href="@{/#intro}">Home</a>
-                    <a class="nav_link" th:href="@{/#catalog}">Catalog</a>
+                    <a class="nav_link" th:href="@{/products}">Catalog</a>
                     <a class="nav_link" th:href="@{/user/cart}">Cart</a>
                     <a class="nav_link" th:href="@{/#contact}">Contact</a>
                     <a class="nav_link" th:href="@{/user/profile}">Profile</a>
