develop add favourites v 1.0

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -66,6 +66,7 @@
                 <a th:href="@{/user/change_password}"><input class="btn" type="button" value="Change password"></a>
                 <a th:href="@{/user/cart}"><input class="btn" type="button" value="Cart"></a>
                 <a th:href="@{/logout}"><input class="btn" type="button" value="Log out"></a>
+                <a th:href="@{/favourites}"><input class="btn" type="button" value="Go to favourites"></a>
             </div>
         </div>
     </div>
