--- a/src/main/resources/templates/products/product.html
+++ b/src/main/resources/templates/products/product.html
@@ -86,6 +86,16 @@
                     <button class="btn" type="submit" name="product">Go to cart</button>
                 </form>
             </div>
+            <div class="product_block">
+                <form th:action="@{/favourites/{id}/add (id=${product.getId()})}" th:object="${product}" th:method="patch">
+                    <button class="btn" type="submit" name="product">Add to favourites</button>
+                </form>
+            </div>
+            <div class="product_block">
+                <form th:action="@{/favourites/{id}/delete (id=${product.getId()})}" th:object="${product}" th:method="delete">
+                    <button class="btn" type="submit" name="product">delete from favourites</button>
+                </form>
+            </div>
         </div>
     </div>
 
@@ -95,30 +105,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="/js/app.js"></script>
-
-
-
-
-
-<!--<h1><b><p th:text="${product.getName()}"></p></b></h1>-->
-<!--<h2><p th:text="${product.getCategory()}"></p></h2>-->
-<!--<p th:text="${product.getDescription()}"></p>-->
-<!--<div th:if="${not flag}">-->
-<!--    <form th:action="@{/login}">-->
-<!--        <button class="profile_button" type="submit" name="product">Add to cart</button>-->
-<!--    </form>-->
-<!--</div>-->
-
-
-
-<!--<form th:action="@{/products}">-->
-<!--    <button class="profile_button" type="submit" name="product">Back</button>-->
-<!--</form>-->
-
-
-
-
-
 
 </body>
 </html>
